<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">QR-Master</string>
    <string name="title_scanner">Сканер</string>
    <string name="title_generator">Генератор</string>
    <string name="title_history">Історія</string>
    <string name="hint_enter_content">Введіть текст, URL, Wi-Fi або контакт...</string>
    <string name="btn_generate">Згенерувати</string>
    <string name="btn_save">Зберегти</string>
    <string name="btn_flash_on">Увімкнути ліхтарик</string>
    <string name="btn_flash_off">Вимкнути ліхтарик</string>
    <string name="type_url">URL</string>
    <string name="type_text">Текст</string>
    <string name="type_wifi">Wi-Fi</string>
    <string name="type_vcard">Контакт</string>
    <string name="search_hint">Пошук...</string>
    <string name="filter_all">Усі</string>
    <string name="btn_share">Поділитися</string>
    <string name="btn_open">Відкрити</string>
    <string name="btn_copy">Копіювати</string>
    <string name="copied_to_clipboard">Скопійовано в буфер обміну</string>
    <string name="qr_saved">QR-код збережено</string>
    <string name="qr_deleted">QR-код видалено</string>
    <string name="camera_permission_required">Дозвіл на камеру обов&#8217;язковий</string>
    <string name="no_content">Введіть вміст для генерації</string>
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_password">Пароль</string>
    <string name="wifi_security">Тип захисту</string>
    <string name="vcard_name">Ім&#8217;я</string>
    <string name="vcard_phone">Телефон</string>
    <string name="vcard_email">Email</string>
    <string name="undo">Скасувати</string>
    <string name="content_description_qr">QR-код</string>
    <string name="label_code_type">Тип коду</string>
    <string name="scanner_instruction">Наведіть камеру на QR-код</string>
    <string name="empty_history">Немає збережених кодів</string>
    <string name="label_title">Назва</string>
    <string name="label_content">Вміст</string>
    <string name="open_failed">Не вдалося відкрити</string>
    <string name="open_url_only">Можна відкрити тільки URL</string>
</resources>
